# Speech-recognition-app-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  myapp  requirements.txt  test.py
.cmake/api/v1/reply/: cache-v2-010f0823c9b949326378.json  cmakeFiles-v1-1e44b5a6b4daf7d7d5a0.json  codemodel-v2-d9c559e8fd2edcd02c54.json  index-2026-02-13T08-07-37-0324.json  target-myapp-82490abecbe71d3bbedb.json
include/: file.h  includes.h  ui.h
scripts/: gpu.py  scripts.py  test.py
src/: main.cpp  ui.cpp
